# Rust

./: .gitignore  Cargo.toml
1. Beginner/: Cargo.toml
1. Beginner/1. Get Up And Running FAST!/constamts_and_statics/: Cargo.toml
1. Beginner/1. Get Up And Running FAST!/control_flow/src/: main.rs
1. Beginner/1. Get Up And Running FAST!/data_types/src/: main.rs
1. Beginner/2. How Rust Achieves Memory Safety/borrowing/src/: main.rs
1. Beginner/2. How Rust Achieves Memory Safety/slices/src/: main.rs
1. Beginner/3. Building Your Own Data Types/enums_and_matching/src/: main.rs
1. Beginner/3. Building Your Own Data Types/tuples/src/: main.rs
1. Beginner/3. Building Your Own Data Types/vectors/src/: main.rs
1. Beginner/5. Structuring Larger Projects/draw/: Cargo.toml
1. Get Up And Running FAST!/constamts_and_statics/src/: main.rs
1. Get Up And Running FAST!/control_flow/src/: main.rs
1. Get Up And Running FAST!/functions/src/: main.rs
1. Get Up And Running FAST!/variables/src/: main.rs
2. How Rust Achieves Memory Safety/ownership/src/: main.rs
2. Intermediate/: .gitignore  Cargo.toml
2. Intermediate/1. Polymorphism With Generics & Traits/generics/src/: main.rs
2. Intermediate/1. Polymorphism With Generics & Traits/traits_and_traitBounds/: Cargo.toml
2. Intermediate/1. Polymorphism With Generics & Traits/traits_and_traitBounds/src/: main.rs
3. Building Your Own Data Types/enums_and_matching/src/: main.rs
3. Building Your Own Data Types/option_and_result/src/: main.rs
3. Building Your Own Data Types/structs_and_impl_blocks/src/: main.rs
3. Building Your Own Data Types/vectors/src/: main.rs
4. How To Structure Your Rust Projects/auth_service/: Cargo.toml
4. How To Structure Your Rust Projects/auth_service/src/: lib.rs  main.rs
blog/: Cargo.toml
blog/blog_api/: Cargo.toml
blog/blog_api/src/: main.rs
blog/blog_shared/: Cargo.toml
blog/blog_shared/src/: lib.rs
blog/blog_web/src/: main.rs
(+5 files in other folders)
