[workspace]
members = ["*/*/", "2. How Rust Achieves Memory Safety/slices", "3. Building Your Own Data Types/structs_and_impl_blocks"]
exclude = [".git/", "target"]
[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "your_binary_name"
path = "src/main.rs"
