[workspace]
members = ["*/*/", "2. How Rust Achieves Memory Safety/slices", "3. Building Your Own Data Types/enums_and_matching", "3. Building Your Own Data Types/option_and_result", "3. Building Your Own Data Types/structs_and_impl_blocks", "3. Building Your Own Data Types/tuples", "3. Building Your Own Data Types/vectors", "4. How To Structure Your Rust Projects/auth_service", "4. How To Structure Your Rust Projects/my_package"]
exclude = [".git/", "target"]
[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "your_binary_name"
path = "src/main.rs"
