[workspace]
members = ["*/*/", "1. Polymorphism With Generics & Traits/generics", "1. Polymorphism With Generics & Traits/traits_and_traitBounds"]
exclude = [".git/", "target", ]
[package]
name = "Intermediate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "your_binary_name"
path = "src/main.rs"
